--- a/bylaws.tex
+++ b/bylaws.tex
@@ -550,7 +550,7 @@ engineering designs, and analysis pipelines. All Collaboration members agree to 
 %All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
 
 {\color{red} 
-The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the Collaboration for ratification by its voting Members.
+The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the Collaboration for ratification by its Voting Members.
 }
 
 \subsection{Organization}
@@ -657,7 +657,7 @@ The role of the Speakers Bureau is to help Collaboration members give more and b
 
 
 {\color{red}
-Any Member invited to give a talk primarily focused on CMB-S4, e.g., on the instrument, projections or science results, at a conference or workshop must forward that request upon receipt and before acceptance to the Speakers Bureau.  The Speakers Bureau will work with the invited Member to determine whether they should suggest that a more appropriate Member be invited to give the talk, after considering 
+Any Member invited to give a talk primarily focused on CMB-S4, e.g., on the instrument, projections or science results, at a conference or workshop must forward that request upon receipt and before acceptance to the Speakers Bureau.  The Speakers Bureau will work with the invited Member to determine whether the invited Member should reply to the request with the suggestion that a more appropriate Member be invited to give the talk. In their deliberations, the Speakers Bureau and invited Member should consider
 the contributions of various members to the collaboration, the desire to promote junior members, and the fair distribution of opportunities to give talks.
 
 To give talks not in the above category, a Collaboration member must also notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
@@ -668,12 +668,9 @@ Collaboration members must send abstracts and titles to the Speakers Bureau at l
 
 All talks must maintain confidentiality for the project's results.
 Any unpublished results shown in talks must be approved for public release by the Science Council before being shown. Such results should be marked ``CMB-S4 PRELIMINARY'' on slides until publication.
-Pre-approved results do not require re-approval from the collaboration for separate talks, although the Speakers Bureau still needs to be notified about the talk.
+\sout{Pre-approved results do not require re-approval from the collaboration for separate talks, although the Speakers Bureau still needs to be notified about the talk.}
 
-
-
-
-\sout{The Speakers Bureau will maintain records of all presentations given in the name of the Collaboration, and serve as a clearinghouse for talk invitations forwarded from any member. This struck out text was moved to bullets at beginning of section.}
+\sout{The Speakers Bureau will maintain records of all presentations given in the name of the Collaboration, and serve as a clearinghouse for talk invitations forwarded from any member.} {\bf NB This last paragraph effectively moved to bullets at beginning of this section.}
 }
 
 \subsection{Violations of the Policy and Remedies}
@@ -682,21 +679,23 @@ Violations of the policy will be addressed by the Publication Board, which will 
 
 \section{Ombudspersons}
 
-CMB-S4 has two Ombudspersons who are available to members of the Collaboration.\footnote{This section is drawn from the LSST DESC Code of Conduct which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}} The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the Collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is  \textcolor{red}{to be outlined in a CMB-S4 Code of Conduct which will be determined following the formation of the Collaboration}. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the Collaboration. The Ombudspersons term of 2 years, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombusdspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the Collaboration. \textbf{They will not hold any other leadership positions within the Collaboration and will report only to the \shorte.} They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
+CMB-S4 has two Ombudspersons who are available to members of the Collaboration.\footnote{This section is drawn from the LSST DESC Code of Conduct which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}} The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the Collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is  \textcolor{red}{to be outlined in a CMB-S4 Code of Conduct which will be drafted following the formation of the Collaboration}. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the Collaboration. 
 
-CMB-S4  has chosen to adopt the role and function of the Ombudsperson as expressed by the International Ombudsman Association (with some additions and edits for gender neutrality):\url{https://www.ombudsassociation.org/Resources/Frequently-Asked-Questions/What-is-anOrganizational-Ombudsman}
+The Ombudspersons serve two year terms, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombudspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the Collaboration. They do not hold any other leadership positions within the Collaboration and report only to the \shorte. They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
+
+{\color{red} \sout{CMB-S4  has chosen to adopt the role and function of the Ombudsperson as expressed by the International Ombudsman Association (with some additions and edits for gender neutrality):\url{https://www.ombudsassociation.org/Resources/Frequently-Asked-Questions/What-is-anOrganizational-Ombudsman}}}
 
 \subsection{Role}
 
-The primary duties of an organizational ombudsperson are (1) to work with individuals and groups in an organization to explore and assist them in determining options to help resolve conflicts, problematic issues or concerns, and (2) to bring systemic concerns to the attention of the organization for resolution. An organizational ombudsperson operates in a manner to preserve the confidentiality of those seeking services, maintains a neutral/impartial position with respect to the concerns raised, works at an informal level of the organizational system, and is independent of formal organizational structures. Successfully fulfilling that primary function in a manner consistent with the IOA Standards of Practice requires a number of activities on the part of the ombudsperson while precluding others.
+The primary duties of an organizational Ombudsperson are (1) to work with individuals and groups in an organization to explore and assist them in determining options to help resolve conflicts, problematic issues or concerns, and (2) to bring systemic concerns to the attention of the organization for resolution. An organizational Ombudsperson operates in a manner to preserve the confidentiality of those seeking services, maintains a neutral/impartial position with respect to the concerns raised, works at an informal level of the organizational system, and is independent of formal organizational structures. Successfully fulfilling that primary function in a manner consistent with the IOA Standards of Practice requires a number of activities on the part of the Ombudsperson while precluding others.
 
-Activities and functions most frequently undertaken by an ombudsperson include, but are not limited to:
+Activities and functions most frequently undertaken by the Ombudsperson include, but are not limited to:
 \begin{itemize}
-\item Listens and understands issues while remaining neutral with respect to the facts. The ombudsperson does not listen to judge or to decide who is right or wrong. The ombudsperson listens to understand the issue from the perspective of the individual. This is a critical step in developing options for resolution.
+\item Listens and understands issues while remaining neutral with respect to the facts. The Ombudsperson does not listen to judge or to decide who is right or wrong. An ombudsperson listens to understand the issue from the perspective of the individual. This is a critical step in developing options for resolution.
 \item Assists in reframing issues and developing and helping individuals evaluate options. This helps individuals identify the interests of various parties to the issues and helps focus efforts on potential options to meet those interests.
 \item Guides or coaches individuals to deal directly with other parties, including the use of formal resolution resources of the organization. An ombudsperson often seeks to help individuals improve their skill and their confidence in giving voice to their concerns directly.
 \item Refers individuals to appropriate resolution resources. An ombudsperson may refer individuals to one or more formal organizational resources that can potentially resolve the issue.
-\item Assists in surfacing issues to formal resolution channels. When an individual is unable or unwilling to surface a concern directly, the ombudsperson can assist by helping give voice to the concern and/or creating an awareness of the issue among appropriate decision-makers in the organization.
+\item Assists in surfacing issues to formal resolution channels. When an individual is unable or unwilling to surface a concern directly, an ombudsperson can assist by helping give voice to the concern and/or creating an awareness of the issue among appropriate decision-makers in the organization.
 \item Facilitates informal resolution processes. An ombudsperson may help to resolve issues between parties through various types of informal mediation.
 \item Identifies new issues and opportunities for systemic change for the organization. The unique positioning of the ombudsperson serves to provide unfiltered information that can produce insight to issues and resolutions. The ombudsperson is a source of detection and early warning of new issues and a source of suggestions of systemic change to improve existing processes.
 \end{itemize}
@@ -749,21 +748,21 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  
 
 The elected candidates begin to serve immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their positions (one, two or three years) to June 30, 2018. 
-\textcolor{red}{As is directed for elections once the Collaboration is established, the initial elections are timed to provide Collaboration Members multiple opportunities to participate in Collaboration governance. }
+\textcolor{red}{As is directed for elections once the Collaboration is established, the initial elections are sequenced to provide Collaboration Members multiple opportunities to participate in Collaboration governance. }
 
 \subsection{Spokespersons} 
-The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates.  \textcolor{red}{A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the two Co-Spokespersons. 
-The first Co-spokesperson terms are to be three years to enable staggered leadership elections with the other members of the Executive Team in future elections. }
+The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates.  \textcolor{red}{A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the Spokespersons. 
+The first Spokesperson terms are to be three years. \sout{ to enable staggered leadership elections with the other members of the Executive Team in future elections.} }
 %, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
 \subsection{Council and Committee Chairs}
 \textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the IEVC.   Self-nominations are accepted.
 After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
-A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the Science Council co-Chairs. For the Committee chairs each Voting Member votes for a single candidate for each open Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
+A ranked voting scheme approved by the ICCC prior to the election will be used to determine the Science Council co-Chairs. \sout{For the Committee chairs each Voting Member votes for a single candidate for each open Chair position.} In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
 
 
 \subsection{Governing Board}
-\textcolor{red}{The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws, with the modification that the ICCC is to approve the ranked vote scheme to be utilized. Additionally,} prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
+\textcolor{red}{The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws, with the modification that the ICCC approves the ranked vote scheme.  Additionally,} prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
 To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
 
 After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
